[package]
name = "stellar"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["starlight-industries", "Caznix", "Eatmynerds"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libstellar =  { workspace = true,features = ["archlinux","debian"]}
anyhow = { version = "1" }
clap = { version = "4.5.26", features = ["derive"] }
log = "0.4"
rich-logger = { version = "0.1.17", features = ["pretty_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
backtrace = "0.3.74"
regex = "1.11.1"
parking_lot = "0.12.3"
rustversion = "1.0.19"
crossterm = "0.28.1"
inquire = "0.7.5"
clap-verbosity-flag = "3.0.2"
reqwest = "0.12.12"
async-trait = "0.1.85"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
version_check = "0.9.5"

# See more at https://github.com/johnthagen/min-sized-rust
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
rpath = false
#strip = true

[profile.dev]
codegen-units = 512
opt-level = 0
panic = "abort"
incremental = true

[features]
default = []
nightly = []



[workspace]
members = ["libstellar"]

[workspace.dependencies]
libstellar = { path = "libstellar"}

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unreachable_code = "deny"
unused_must_use = "deny"
unused_results = "deny"
missing_debug_implementations = "deny"
missing_copy_implementations = "deny"
array_into_iter = "deny"
explicit_outlives_requirements = "deny"
elided_lifetimes_in_paths = "deny"
semicolon_in_expressions_from_macros = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
variant_size_differences = "deny"
