[package]
name = "libstellar"
version = "0.1.0"
edition = "2021"

[dependencies]
#anyhow = "1.0.95"
async-trait = "^0.1.85"
thiserror = "^2.0.11"
serde = { version = "1.0.217", features = ["derive"] }

[target.'cfg(feature = "serde")'.dependencies]
serde = "^1"

[target.'cfg(feature = "tokio")'.dependencies]

[profile.release]
#codegen-units = 1
lto = true
opt-level = "s"
#strip = true

[features]
default = []
serde = []
tokio = []