[package]
name = "libstellar"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "^0.1.85"
thiserror = "^2.0.11"
serde = { version = "1.0.217", features = ["derive"] }

[target.'cfg(feature = "serde")'.dependencies]
serde = "^1"

[target.'cfg(feature = "tokio")'.dependencies]
tokio = "^1.43"

[features]
default = []
serde = []
tokio = []